--- a/styles.css
+++ b/styles.css
@@ -56,6 +56,7 @@ footer {
 
 a {
   text-decoration: none;
+  cursor: pointer;
 }
 
 button {
@@ -116,11 +117,32 @@ h2 {
     max-width: 240px;
 }
 
+.teaser {
+    max-width: 400px;
+    border-radius: 25px;
+}
+
 /* Media Queries */
 
 @media screen and (max-width: 768px) {
     .button-wrapper {
         flex-direction: column;
+    }
+
+    .h1 {
+        font-size: 2em;
+    }
+
+    .logo {
+        max-width: 180px;
+    }
+
+    .container {
+        min-height: auto;
+    }
+
+    .main {
+        height: 100vh;
     }
     
 }
